--- a/src/stories/card.css
+++ b/src/stories/card.css
@@ -22,7 +22,7 @@ p {
     font-family: 'Inter';
     background-color: white;
     gap: 24px;
-    min-width: 368px;
+    /* min-width: 368px; */
     box-sizing: border-box;
     border-radius: 8px;
     box-shadow: 0 10px 30px 0 #16182D1A;
@@ -40,7 +40,8 @@ p {
 .overlay-container {
     position: relative;
     height: 100px;
-    min-width: 368px;
+    /* min-width: 368px; */
+    min-width: 100%;
 }
 
 .overlay-image {
@@ -123,7 +124,6 @@ p {
 }
 .button-container {
     align-self: center;
-    /* width: 100%; */
     min-width: 100%;
 }
 
@@ -138,4 +138,12 @@ p {
 
 .background-transition.hover {
     opacity:1
+}
+
+
+@media (max-width: 352px) {
+    .list-line {
+        flex-direction: column;
+        align-items: center;
+    }
 }
