--- a/src/stories/header.css
+++ b/src/stories/header.css
@@ -66,9 +66,8 @@ header {
     flex-direction: column;
     /* justify-content: space-between; */
     align-items: center;
-    height: 100%;
-    /* min-height: 100vh; */
-    /* box-sizing: border-box; */
+    min-height: 100vh;
+    box-sizing: border-box;
   }
   .header-container {
     padding:1em 1.5em;
@@ -94,12 +93,10 @@ header {
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    /* background-color: #16182D; */
     padding-bottom: 3.75em;
     box-sizing: border-box;
-    /* flex: 1; */
-    height: 100vh;
-    /* min-height: 100%; */
+    flex: 1;
+    height: 100%;
   }
 
   .storybook-links.mobile {
@@ -135,8 +132,11 @@ header {
 }
 
 @media (max-height: 700px) {
+  .dropdown-container.mobile {
+    flex: 1;
+  }
   .storybook-links.mobile {
-    padding: 1.5em 0;
+    /* padding: 1.5em 0; */
     margin: 0;
   }
 
@@ -145,6 +145,6 @@ header {
   }
   
   .dropdown-container.mobile {
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
   }
 }
