footer and stuff

--- a/src/stories/accordion.css
+++ b/src/stories/accordion.css
@@ -6,6 +6,10 @@
     justify-content: start;
 }
 
+.accordion p {
+    opacity: 100%;
+}
+
 .accordion-content {
     display: flex;
     flex-direction: column;
