--- a/src/index.css
+++ b/src/index.css
@@ -2,40 +2,80 @@
 
 :root {
   background-color: white;
+  color: #16182D;
   font-family: 'Inter';
-  
-  h1, h2, h3, h4, p {
-    margin: 0;
-    padding: 0;
-  }
-
-  h1 {
-      font-size: 54px;
-      /* font-weight: 500; */
-      line-height: 64.8px;
-      /* letter-spacing: -0.5%; */
-  }
-
-  h2 {
-    font-size: 48px;
-    line-height: 120%;
-  }
-  
-  p {
-      font-size: 16px;
-      font-weight: 300;
-      line-height: 24px;
-      letter-spacing: 0;
-  }
-
-  h3 {
-      font-size: 24px;
-      font-weight: 700;
-      line-height: 28.8px;
-      /* letter-spacing: -0.5%; */
-  }
 }
 
 body {
   height: 100vh;
+}
+
+h1, h2, h3, h4, p {
+  margin: 0;
+  padding: 0;
+}
+
+
+
+/*  desktop */
+h1 {
+  font-size: 54px;
+  font-weight: 700;
+  line-height: 64.8px;
+  letter-spacing: -0.5px;
+}
+
+h2 {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 57.6px;
+  letter-spacing: -0.5px;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28.8px;
+  letter-spacing: -0.5px;
+}
+
+p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+
+/* minimized/mobile */
+@media (max-width: 1328px) {
+  h1 {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 43.2px;
+    letter-spacing: -0.5px;
+    margin: 8px 0;
+  }
+  
+  /* no change */
+  h2 {
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 57.6px;
+    letter-spacing: -0.5px;
+  }
+  
+  h3 {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: -0.5px;
+  }
+  
+  /* no change */
+  p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0;
+  }
 }
