--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -1,18 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
-.storybook-button {
+.button-base {
   display: inline-block;
   cursor: pointer;
   border: none;
+}
+
+.storybook-button {
   border-radius: 30px;
   height: 48px;
   min-width: 118px;
+  width: 100%;
   font-size: 16px;
   font-weight: 300;
   /* line-height: inherit; */
   font-family: 'Inter';
   transition: 250ms background-color ease-in; 
 }
+
+
+/* button style for socials */
+.button-social {
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+}
+
 .storybook-button--primary {
   background-color: #3e51dc;
   color: white;
