--- a/src/stories/page.css
+++ b/src/stories/page.css
@@ -1,3 +1,7 @@
+.page-container .tagline p {
+  opacity: 70%;
+}
+
 .page-container {
   margin: 0 auto;
   min-height: 100vh;
@@ -66,7 +70,6 @@
 /* white plaintext */
 .text-light {
   color: white;
-  opacity: 70%;
 }
 
 .subtitle-light {
@@ -91,10 +94,6 @@
 }
 
 @media (max-width: 1120px) {
-  .page-content h1 {
-    font-size: 36px;
-  }
-
   .page-content {
     padding: 3em 1.5em;
   }
@@ -117,7 +116,7 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    padding-bottom: 48px;
+    padding-bottom: 3em;
     height: auto;
   }
 
@@ -138,5 +137,9 @@
   }
   .text-light {
     min-width: 100%;
+  }
+
+  .button-container {
+    max-width: 100%;
   }
 }
