--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,24 @@
   font-family: 'Inter';
 }
 
+/* storybook adding random 6000 height to my page */
+canvas {
+  max-height: 0;
+}
+
 body {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 h1, h2, h3, h4, p {
   margin: 0;
   padding: 0;
 }
+/* storybook adding random margins to ul */
+ul {
+  margin: 0;
+}
 
-
-
-/*  desktop */
 h1 {
   font-size: 54px;
   font-weight: 700;
@@ -40,10 +46,42 @@ h3 {
 }
 
 p {
+  /* display: block; */
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0;
+}
+
+/*  desktop 1440*/
+@media ( max-width: 1440px) {
+  h1 {
+    font-size: 54px;
+    font-weight: 700;
+    line-height: 64.8px;
+    letter-spacing: -0.5px;
+  }
+  
+  h2 {
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 57.6px;
+    letter-spacing: -0.5px;
+  }
+  
+  h3 {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28.8px;
+    letter-spacing: -0.5px;
+  }
+  
+  p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0;
+  }
 }
 
 /* minimized/mobile */
